--- a/DataMining-Avaliation_testing.ipynb
+++ b/DataMining-Avaliation_testing.ipynb
@@ -2570,8 +2570,14 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
-    "\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    \n",
+    "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(Log.history[\"loss\"],'r', marker='.', label=\"Erro no treinamento\")\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "    \n",
     "    #AVALIAÇÃO\n",
     "    #Passo 1: Recuperar a resposta do modelo para o conjunto de teste e armazenar em um vetor\n",
     "    y_pred = mlp.predict(X_test)\n",
@@ -2676,8 +2682,14 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
-    "\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    \n",
+    "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(Log.history[\"loss\"],'r', marker='.', label=\"Erro no treinamento\")\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "    \n",
     "    #AVALIAÇÃO\n",
     "    #Passo 1: Recuperar a resposta do modelo para o conjunto de teste e armazenar em um vetor\n",
     "    y_pred = mlp.predict(X_test)\n",
@@ -2782,8 +2794,14 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
     "\n",
+    "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(Log.history[\"loss\"],'r', marker='.', label=\"Erro no treinamento\")\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "    \n",
     "    #AVALIAÇÃO\n",
     "    #Passo 1: Recuperar a resposta do modelo para o conjunto de teste e armazenar em um vetor\n",
     "    y_pred = mlp.predict(X_test)\n",
