Bug fixes and code adjusting

--- a/DataMining-Avaliation_testing.ipynb
+++ b/DataMining-Avaliation_testing.ipynb
@@ -393,7 +393,7 @@
     "## Para session_train_mean_drop_replacing\n",
     "\n",
     "#MODEL\n",
-    "RC_mean_drop_replacing = RandomForestClassifier(n_estimators=100, max_features=10)\n",
+    "RC_mean_drop_replacing = RandomForestClassifier(n_estimators=100, max_features=10, random_state=42)\n",
     "\n",
     "#CROSS-VALIDATION\n",
     "X = session_train_X_mean_drop_replacing\n",
@@ -772,7 +772,7 @@
     "## Para session_train_mean_replacing\n",
     "\n",
     "#MODEL\n",
-    "RC_mean_replacing = RandomForestClassifier(n_estimators=100, max_features=10)\n",
+    "RC_mean_replacing = RandomForestClassifier(n_estimators=100, max_features=10, random_state=42)\n",
     "    \n",
     "#CROSS-VALIDATION\n",
     "X = session_train_X_mean_replacing\n",
@@ -1148,7 +1148,7 @@
     "## Para session_train_median_replacing\n",
     "\n",
     "#MODEL\n",
-    "RC_median_replacing = RandomForestClassifier(n_estimators=200, max_features=10)\n",
+    "RC_median_replacing = RandomForestClassifier(n_estimators=200, max_features=10, random_state=42)\n",
     "    \n",
     "#CROSS-VALIDATION\n",
     "X = session_train_X_median_replacing\n",
@@ -1524,7 +1524,7 @@
     "## Para session_train_min_replacing\n",
     "\n",
     "#MODEL\n",
-    "RC_min_replacing = RandomForestClassifier(n_estimators=250, max_features=10)\n",
+    "RC_min_replacing = RandomForestClassifier(n_estimators=250, max_features=10, random_state=42)\n",
     "    \n",
     "#CROSS-VALIDATION\n",
     "X = session_train_X_min_replacing\n",
@@ -2859,6 +2859,38 @@
     "\n",
     "#Gerando a base de predição:\n",
     "#Log_y_pred_min_replacing = mlp.predict(session_test_X_min_replacing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CRIAR E SALVAR OS MODELOS PREDITOS:\n",
+    "DF_RC_y_pred_drop_mean_replacing = pd.DataFrame(RC_y_pred_drop_mean_replacing)\n",
+    "DF_RC_y_pred_drop_mean_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_RC_y_pred_mean_replacing = pd.DataFrame(RC_y_pred_mean_replacing)\n",
+    "DF_RC_y_pred_mean_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_RC_y_pred_median_replacing = pd.DataFrame(RC_y_pred_median_replacing)\n",
+    "DF_RC_y_pred_median_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_RC_y_pred_min_replacing = pd.DataFrame(RC_y_pred_min_replacing)\n",
+    "DF_RC_y_pred_min_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_Log_y_pred_drop_mean_replacing = pd.DataFrame(np.round(abs(Log_y_pred_drop_mean_replacing)))\n",
+    "DF_Log_y_pred_drop_mean_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_Log_y_pred_mean_replacing = pd.DataFrame(np.round(abs(Log_y_pred_mean_replacing)))\n",
+    "DF_Log_y_pred_mean_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_Log_y_pred_median_replacing = pd.DataFrame(np.round(abs(Log_y_pred_median_replacing)))\n",
+    "DF_Log_y_pred_median_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n",
+    "\n",
+    "DF_Log_y_pred_min_replacing = pd.DataFrame(np.round(abs(Log_y_pred_min_replacing)))\n",
+    "DF_Log_y_pred_min_replacing.to_csv(\"data/predictions/session_predict_y_mean_drop_replacing\", sep=',', encoding='utf-8')\n"
    ]
   }
  ],
