Bug fixes and code adjusting

--- a/DataMining-Avaliation_testing.ipynb
+++ b/DataMining-Avaliation_testing.ipynb
@@ -72,6 +72,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "#Keras\n",
+    "np.random.seed(1337) # for reproducibility\n",
     "from keras.models import Sequential\n",
     "from keras.layers import InputLayer, Dense\n",
     "#from keras.optimizers import SGD\n",
@@ -2270,7 +2271,7 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200, shuffle=False)\n",
     "    \n",
     "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
     "    fig, ax = plt.subplots()\n",
@@ -2570,7 +2571,7 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200,shuffle=False)\n",
     "    \n",
     "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
     "    fig, ax = plt.subplots()\n",
@@ -2682,7 +2683,7 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200, shuffle=False)\n",
     "    \n",
     "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
     "    fig, ax = plt.subplots()\n",
@@ -2794,7 +2795,7 @@
     "    #DATA MINING\n",
     "    # Treine o modelo\n",
     "    batch_size = 8\n",
-    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200)\n",
+    "    Log = mlp.fit(X_train, y_train.order.to_numpy(), batch_size=batch_size, epochs=200, shuffle=False)\n",
     "\n",
     "    # Visualizando o comportamento do erro durante o treinamento de forma gráfica\n",
     "    fig, ax = plt.subplots()\n",
